/*
Copyright 2017-2018 Echo Park Labs

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

For additional information, contact:

email: info@echoparklabs.io
*/

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.epl.protobuf.stac";
option java_outer_classname = "StacMetadata";
option objc_class_prefix = "STC";

package epl.protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "epl/protobuf/geometry_operators.proto";
import "epl/protobuf/stac.proto";


message MetadataResult {
    //    https://github.com/protocolbuffers/protobuf/issues/1606
    google.protobuf.DoubleValue eo_cloud_cover = 6;
    google.protobuf.DoubleValue eo_sun_azimuth = 7;
    google.protobuf.DoubleValue eo_sun_elevation = 8;
    google.protobuf.DoubleValue eo_gsd = 9;
    google.protobuf.DoubleValue eo_off_nadir = 10;

    BBoxField eo_bbox = 11;
    epl.protobuf.GeometryData eo_geometry = 12;
    reserved 13 to 200;

    google.protobuf.Timestamp src_img_date = 201;
    google.protobuf.StringValue state_initials = 202;
    google.protobuf.StringValue filename = 203;
}